Improve background and fix jumping body bg  (#295)
* use a fixed bg on body to remove a pseudo

* fix jumping background (https://css-tricks.com/the-fixed-background-attachment-hack/)

* use logical viewport units

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,7 @@
     min-inline-size: 320px;
     margin: 0;
     padding: 0;
-    background-color: transparent;
+    background: transparent;
     color: var(--surface-color-foreground);
     font-family: var(--text-body-font-family);
     font-size: var(--text-body-font-size);
@@ -40,9 +40,9 @@
       content: '';
       position: fixed;
       z-index: -1;
-      block-size: 100vh;
-      inline-size: 100vw;
-      background: var(--surface-color-background);
+      block-size: 100lvb;
+      inline-size: 100lvi;
+      background: var(--surface-color-background) no-repeat 0 0 / cover;
     }
   }
 
